# assistant-brain

./: .env_example  .gitignore  Makefile  README.md  backup_brain.sh  config.yaml  deep-research-report-2.md  deep-research-report.md  felix-openclaw-pontos-relevantes.md  felixcraft.md  generate_litellm_virtual_key.py  llms_locais.md  policy-engine  requirements-docling.txt  requirements-runtime.txt  requirements.txt
.github/: CODEOWNERS
platform/policy-engine/: README.md  pyproject.toml
platform/policy-engine/contracts/: governance.v1.yaml  runtime.v1.yaml  security.v1.yaml  trading.v1.yaml
platform/policy-engine/src/policy_engine/: engine.py
platform/policy-engine/src/policy_engine/application/: __init__.py  convergence.py  quality.py
platform/policy-engine/src/policy_engine/domain/: __init__.py  contract_loader.py  contract_models.py  models.py  policy_rule.py
platform/policy-engine/src/policy_engine/reporting/: __init__.py  json_report.py
platform/policy-engine/src/policy_engine/rules/: __init__.py
platform/policy-engine/src/policy_engine/utils/: __init__.py  codeowners.py  yaml_loader.py
platform/policy-engine/tests/: test_convergence.py  test_engine.py  test_reporting.py
platform/policy-engine/tests/contract/: test_contract_loader.py
platform/policy-engine/tests/integration/: test_cli_integration.py  test_governance_hardening.py
platform/policy-engine/tests/unit/governance/: test_governance_rules.py
platform/policy-engine/tests/unit/runtime/: test_runtime_rules.py
platform/policy-engine/tests/unit/security/: test_security_rules.py
(+502 files in other folders)
